tests/pass/operator/chained.us
fn main() {
    print(10<=10+1);
}