tests/fail/not_poly_struct.us
type a = i32;

fn main() -> a<i32> {
    let list = List {
        head:10,
        body:nil
    };

    list;
}
